[gd_scene load_steps=32 format=3 uid="uid://y7qmkb3srevp"]

[ext_resource type="Script" path="res://scripts/Level/Level.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d267mpawqf7ih" path="res://scenes/Background.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cu4ptfibfkx75" path="res://player/Player.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://vfec85wc02fo" path="res://fonts/BabelStoneModern.ttf" id="5"]
[ext_resource type="Script" path="res://scripts/Level/labelTime.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://csvhoo735e2ow" path="res://textures/progress.png" id="7"]
[ext_resource type="Script" path="res://scripts/Level/Base.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://bf0wn2caen3fo" path="res://scenes/level/health_bar.tscn" id="10_ykl2i"]
[ext_resource type="Theme" uid="uid://ck1yusat33fmo" path="res://main_theme.tres" id="11_6yos8"]
[ext_resource type="PackedScene" uid="uid://dtk1o5eh7u8xk" path="res://scenes/level/energy_bar.tscn" id="13_hpo1v"]
[ext_resource type="PackedScene" path="res://scenes/inventorySlot.tscn" id="14"]
[ext_resource type="Script" path="res://scripts/Level/totalEnemysLabel.gd" id="15"]
[ext_resource type="Script" path="res://scripts/Level/labelFPS.gd" id="16"]
[ext_resource type="Script" path="res://scripts/Level/pauseMenu.gd" id="17"]
[ext_resource type="Script" path="res://scripts/Level/infoLabel.gd" id="18"]
[ext_resource type="Script" path="res://scripts/Level/closeAnimTween.gd" id="19"]
[ext_resource type="PackedScene" uid="uid://cqgwwhf6ajm1o" path="res://scenes/ItemSpawner.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://geph6rl0xq3m" path="res://scenes/Border.tscn" id="21"]
[ext_resource type="Script" path="res://scripts/Level/camera.gd" id="22"]
[ext_resource type="Script" path="res://scripts/Level/pauseManager.gd" id="23"]
[ext_resource type="PackedScene" path="res://scenes/EnemySpawner.tscn" id="24"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vwo18"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("5")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="14"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../canvasLayerPause/colorRectPause:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../canvasLayerPause/colorRectPause:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dj6p7"]
_data = {
"anim": SubResource("14")
}

[sub_resource type="Animation" id="Animation_mkare"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infoLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("infoLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jitfb"]
resource_name = "blend"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infoLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("infoLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gic2q"]
_data = {
"RESET": SubResource("Animation_mkare"),
"blend": SubResource("Animation_jitfb")
}

[sub_resource type="RectangleShape2D" id="22"]
size = Vector2(810, 82)

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1")
playerScene = ExtResource("3")
healthBarScene = ExtResource("10_ykl2i")
energyBarScene = ExtResource("13_hpo1v")
metadata/_edit_lock_ = true

[node name="Background" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(960, 540)
scale = Vector2(1920, 1080)
color = Color(0, 0, 0, 1)
blend_mode = 2
texture = SubResource("PlaceholderTexture2D_vwo18")

[node name="Player" parent="." instance=ExtResource("3")]
position = Vector2(960, 540)

[node name="uiElements" type="CanvasLayer" parent="."]
layer = 2

[node name="gameElements" type="CanvasLayer" parent="uiElements"]

[node name="labelTimer" type="Label" parent="uiElements/gameElements"]
light_mask = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 105.0
theme = ExtResource("11_6yos8")
theme_override_font_sizes/font_size = 65
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6")

[node name="Timer" type="Timer" parent="uiElements/gameElements/labelTimer"]
autostart = true

[node name="Tween" type="Tween" parent="uiElements/gameElements/labelTimer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="letterCountdown" type="CenterContainer" parent="uiElements/gameElements"]
visible = false
light_mask = 2
offset_left = 1140.0
offset_right = 1240.0
offset_bottom = 100.0

[node name="progressBar" type="TextureProgressBar" parent="uiElements/gameElements/letterCountdown"]
light_mask = 2
layout_mode = 2
fill_mode = 4
texture_progress = ExtResource("7")

[node name="letterLabel" type="Label" parent="uiElements/gameElements/letterCountdown"]
light_mask = 2
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "R"

[node name="timer" type="Timer" parent="uiElements/gameElements/letterCountdown"]
one_shot = true

[node name="Base" type="Control" parent="uiElements/gameElements"]
light_mask = 2
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("8")

[node name="healthBar" parent="uiElements/gameElements/Base" instance=ExtResource("10_ykl2i")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -53.0
offset_right = 400.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0

[node name="energyBar" parent="uiElements/gameElements/Base" instance=ExtResource("13_hpo1v")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -92.0
offset_right = 400.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0

[node name="inventory" type="HBoxContainer" parent="uiElements/gameElements/Base"]
light_mask = 2
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 750.0
offset_top = -30.0
offset_right = 874.0
offset_bottom = 30.0
alignment = 2

[node name="slot" parent="uiElements/gameElements/Base/inventory" instance=ExtResource("14")]
layout_mode = 2
slotNumber = 1

[node name="slot2" parent="uiElements/gameElements/Base/inventory" instance=ExtResource("14")]
layout_mode = 2
slotNumber = 2

[node name="infoPanel" type="Control" parent="uiElements"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -335.0
offset_top = -80.0
offset_right = 335.0
grow_horizontal = 2

[node name="background" type="ColorRect" parent="uiElements/infoPanel"]
light_mask = 2
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
color = Color(0.679688, 0.679688, 0.679688, 0.588235)

[node name="container" type="VBoxContainer" parent="uiElements/infoPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="totalEnemysLabel" type="Label" parent="uiElements/infoPanel/container"]
light_mask = 2
layout_mode = 2
theme_override_fonts/font = SubResource("12")
text = "Monster: N/A"
script = ExtResource("15")

[node name="labelFPS" type="Label" parent="uiElements/infoPanel/container"]
light_mask = 2
layout_mode = 2
theme_override_fonts/font = SubResource("13")
text = "FPS: N/A"
script = ExtResource("16")

[node name="pauseMenu" type="Control" parent="uiElements"]
process_mode = 3
light_mask = 2
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -310.0
offset_right = 0.000366211
grow_vertical = 2
script = ExtResource("17")

[node name="animPlayer" type="AnimationPlayer" parent="uiElements/pauseMenu"]
libraries = {
"": SubResource("AnimationLibrary_dj6p7")
}

[node name="VBoxContainer" type="VBoxContainer" parent="uiElements/pauseMenu"]
light_mask = 2
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
metadata/_edit_lock_ = true

[node name="btnContinue" type="Button" parent="uiElements/pauseMenu/VBoxContainer"]
light_mask = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("11_6yos8")
theme_override_font_sizes/font_size = 45
text = "Continue"
flat = true

[node name="spacer" type="Control" parent="uiElements/pauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="btnExit" type="Button" parent="uiElements/pauseMenu/VBoxContainer"]
light_mask = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("11_6yos8")
theme_override_font_sizes/font_size = 45
text = "Exit"
flat = true

[node name="spacer2" type="Control" parent="uiElements/pauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="btnQuit" type="Button" parent="uiElements/pauseMenu/VBoxContainer"]
light_mask = 2
layout_mode = 2
focus_mode = 0
theme = ExtResource("11_6yos8")
theme_override_font_sizes/font_size = 45
text = "Quit"
flat = true

[node name="keyBinding" type="Node" parent="uiElements"]

[node name="infoLabel" type="Label" parent="uiElements/keyBinding"]
light_mask = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -532.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 160.0
theme = ExtResource("11_6yos8")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 38
text = "Esc: Pause/Menu
WASD: Move
Arrow keys: 2nd player"
horizontal_alignment = 2
script = ExtResource("18")

[node name="animPlayer" type="AnimationPlayer" parent="uiElements/keyBinding"]
libraries = {
"": SubResource("AnimationLibrary_gic2q")
}

[node name="Timer" type="Timer" parent="uiElements/keyBinding"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="confDialog" type="ConfirmationDialog" parent="uiElements"]
unique_name_in_owner = true
process_mode = 3
title = "Please confirm..."
position = Vector2i(450, 400)
size = Vector2i(991, 106)
theme = ExtResource("11_6yos8")
dialog_text = "Möchten sie das Spiel wirklich beenden?"

[node name="closeAnim" type="CanvasLayer" parent="."]
layer = 3

[node name="rectUp" type="ColorRect" parent="closeAnim"]
anchors_preset = 10
anchor_right = 1.0
offset_top = -1100.0
color = Color(0, 0, 0, 1)
script = ExtResource("19")
metadata/_edit_lock_ = true

[node name="canvasLayerPause" type="CanvasLayer" parent="."]

[node name="colorRectPause" type="ColorRect" parent="canvasLayerPause"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="baseArea" type="Area2D" parent="."]
position = Vector2(960, 1026)

[node name="CollisionShape2D" type="CollisionShape2D" parent="baseArea"]
visible = false
shape = SubResource("22")

[node name="ItemSpawner" parent="." instance=ExtResource("20")]

[node name="Border" parent="." instance=ExtResource("21")]
visible = false

[node name="camera" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
script = ExtResource("22")

[node name="pauseManager" type="Node" parent="."]
process_mode = 2
script = ExtResource("23")

[node name="EnemySpawner" parent="." instance=ExtResource("24")]

[node name="container" type="Node" parent="."]

[connection signal="timeout" from="uiElements/gameElements/labelTimer/Timer" to="uiElements/gameElements/labelTimer" method="_on_Timer_timeout"]
[connection signal="timeout" from="uiElements/gameElements/letterCountdown/timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="uiElements/pauseMenu/VBoxContainer/btnContinue" to="uiElements/pauseMenu" method="_on_btnContinue_pressed"]
[connection signal="pressed" from="uiElements/pauseMenu/VBoxContainer/btnExit" to="uiElements/pauseMenu" method="_on_btnExit_pressed"]
[connection signal="pressed" from="uiElements/pauseMenu/VBoxContainer/btnQuit" to="uiElements/pauseMenu" method="_on_btnQuit_pressed"]
[connection signal="timeout" from="uiElements/keyBinding/Timer" to="uiElements/keyBinding/infoLabel" method="_on_Timer_timeout"]
[connection signal="confirmed" from="uiElements/confDialog" to="uiElements/pauseMenu" method="_on_ConfirmationDialog_confirmed"]
[connection signal="body_entered" from="baseArea" to="uiElements/gameElements/Base" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="baseArea" to="uiElements/gameElements/Base" method="_on_Area2D_body_exited"]
